Change fuchsia colour to hex colour

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                     const pid = Number(el.text);
                                     span.textContent = this.client.players.name(pid);
                                     if (pid === connectedPlayerId) {
-                                        span.style.color = "fuchsia";
+                                        span.style.color = "#ee00ee";
                                     } else {
                                         span.style.color = "#eee8cd";
                                     }
