Add dan-ball font

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
         <title>Archipelago - Stick Ranger</title>
         <style>
+            @font-face {
+                font-family: dan-ball;
+                src: url("src/dan-ball.otf") format("opentype");
+            }
+
             #cv:-webkit-full-screen {
                 image-rendering: pixelated;
                 image-rendering: -moz-crisp-edges;
