--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             .right-panel {
                 float: right;
-                width: 512px;
+                width: 100%;
                 background-color: rgb(51, 51, 51);
                 color: white;
                 display: flex;
@@ -46,6 +46,8 @@
                 align-items: center;
                 border-radius: 10px;
                 margin: 10px;
+                resize: both;
+                overflow: auto;
             }
 
             #saveCode {
@@ -64,13 +66,13 @@
 
             #chat {
                 flex: 1;
-                width: 500px;
+                width: 100%;
                 border: 2px solid rgb(76, 76, 76);
                 border-radius: 10px;
                 overflow-y: auto;
-                padding: 4px;
                 font-family: monospace;
                 font-size: 0.9em;
+                box-sizing: border-box;
             }
 
             #connectionBox {
@@ -78,13 +80,13 @@
                 align-items: center;
                 display: none;
                 position: sticky;
-                top: -4px;
-                margin: -4px -4px 0px -4px;
+                top: 0;
                 padding: 2px;
                 background-color: rgb(76, 76, 76);
             }
 
             #connectionInfo {
+                font-size: 0.9em;
                 float: left;
             }
 
