--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div id="fullScreenButton">
                 <input type="submit" value="Full Screen" onclick="fullScreen();" />
                 <label class="switch">
-                    <input type="checkbox" id="fontToggle" />
+                    <input type="checkbox" id="fontToggle" checked />
                     <span class="slider round"></span>
                 </label>
 
