Make sure users want to disconnect on the button, upon disconnect, also hide the left panel and go back to step 0. Hide the left panel initially. Make sure that the mouse over the chatbox does not scroll the map

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 margin: 0;
             }
 
-            .left-panel {
+            #left-panel {
+                display: none;
                 float: left;
             }
 
@@ -206,7 +207,7 @@
     </head>
 
     <body id="body">
-        <div class="left-panel">
+        <div id="left-panel">
             <canvas id="cv"></canvas>
             <script src="/game.js"></script>
             <script type="module" src="/src/main.js"></script>
